--- a/scripts/hpos_reduced.yml
+++ b/scripts/hpos_reduced.yml
@@ -1,17 +1,18 @@
 nab_hard_big_hpo:
   search_type: "random"
-  num_experiments: 1
+  num_experiments: 32
   grid:
-    rw_params|class_visit_loss_coef: [0.1, 0.5]
+    rw_params|class_visit_loss_coef: [0.5]
     loss_weights|gen|creative: [0.01, 0.1, 1.0, 2.5]
-    loss_weights|gen|imitative: [0.01, 0.1, 1.0, 2.5]
-    grad_clip_value: [-1.0, 5.0, 10.0, 50.0, 100.0]
-    loss_weights|discr|real: [0.001, 0.01, 0.1, 1.0, 2.5]
-    loss_weights|discr|imitative: [0.001, 0.01, 0.1, 1.0, 2.5]
-    rw_params|dot_product_scale: [1.0, 2.5, 5.0]
-    lr: [0.00005, 0.0001, 0.0002, 0.0005, 0.001]
-    rw_params|space: ["feature", "image"]
-    rw_params|similarity_measure: ["dot_product", "l2_distance"]
+    loss_weights|gen|imitative: [1.0]
+    grad_clip_value: [100.0]
+    loss_weights|discr|real: [1.0]
+    loss_weights|discr|imitative: [1.0]
+    rw_params|dot_product_scale: [1.0, 2.5]
+    lr: [0.0002]
+    rw_params|space: ["feature"]
+    rw_params|similarity_measure: ["dot_product"]
+    rw_params|n_examples_per_proto: [1, 3, 5, 10]
 
 no_visit_loss:
   search_type: "random"
